[project]
name = "spack-package-updates"
version = "0.1.0"
description = "Track important package updates in Spack"
requires-python = ">=3.8"
dependencies = ["networkx[default]"]

[project.scripts]
spack-package-updates = "important_updates:important_outdated_spack_projects"

[project.optional-dependencies]
dev = ["ruff"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
